# ollama-chat

./: .gitignore  README.md  pyproject.toml
ollama_chat/: main.py
